--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f2fc409d-5d88-404a-ba74-c3cd1e55b5ea"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
